--- a/LinitPro.CommonTools/LinitPro.CommonTools.csproj
+++ b/LinitPro.CommonTools/LinitPro.CommonTools.csproj
@@ -3,6 +3,6 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <Authors>linit.pro</Authors>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     </PropertyGroup>
-
 </Project>
