fixed project name

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,13 +21,13 @@ jobs:
         uses: rohith/publish-nuget@v2
         with:
           # Filepath of the project to be packaged, relative to root of repository
-          PROJECT_FILE_PATH: LinitPro.Common/LinitPro.Common.csproj
+          PROJECT_FILE_PATH: LinitPro.CommonTools/LinitPro.CommonTools.csproj
           
           # NuGet package id, used for version detection & defaults to project name
-          PACKAGE_NAME: LinitPro.Common
+          PACKAGE_NAME: LinitPro.CommonTools
           
           # Filepath with version info, relative to root of repository & defaults to PROJECT_FILE_PATH
-          VERSION_FILE_PATH: LinitPro.Common
+          # VERSION_FILE_PATH: LinitPro.Common
 
           # Regex pattern to extract version info in a capturing group
           VERSION_REGEX: ^\s*<Version>(.*)<\/Version>\s*$
