--- a/LinitPro.CommonTools/LinitPro.CommonTools.csproj
+++ b/LinitPro.CommonTools/LinitPro.CommonTools.csproj
@@ -4,5 +4,6 @@
         <TargetFramework>netstandard2.0</TargetFramework>
         <Authors>linit.pro</Authors>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageVersion>1.0.0</PackageVersion>
     </PropertyGroup>
 </Project>
